# Hollow

./: CMakeLists.txt  LICENSE  README.md  build.gradle  settings.gradle  style.xml
gradle/wrapper/: gradle-wrapper.properties
include/: Color.hpp  Hollow.hpp  Version.hpp
include/aurora/: Aurora.hpp
source/: Color.cpp  Hollow.cpp  Version.cpp
source/aurora/: Aurora.cpp
src/main/java/verdant_moss/hollow/: Color.java  Hollow.java  ReleaseType.java  Version.java
src/main/java/verdant_moss/hollow/aurora/: Aurora.java  LoggingLevel.java
src/test/java/verdant_moss/hollow/: HollowTest.java
tests/: test.cpp
